--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "homepage": "https://github.com/zachleat/speedlify#readme",
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
-    "@11ty/eleventy-cache-assets": "^2.3.0",
+    "@11ty/eleventy-fetch": "^4.0.0",
     "byte-size": "^8.1.1",
     "chartist": "^1.3.0",
     "cross-zip": "^4.0.0",
@@ -39,6 +39,7 @@
     "fast-glob": "^3.2.12",
     "lodash": "^4.17.21",
     "performance-leaderboard": "^10.0.0",
+    "puppeteer": "^20.2.0",
     "short-hash": "^1.0.0",
     "speedlify-score": "^3.0.0"
   }
